--- a/workflows/docker.yml
+++ b/workflows/docker.yml
@@ -24,4 +24,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: diydong/mongodb-api:latest
+          tags: momoxhs/mongodb-api:latest
