--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -19,9 +19,15 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
+      - name: Get short commit SHA
+        id: vars
+        run: echo "SHORT_SHA=$(echo ${GITHUB_SHA} | cut -c1-7)" >> $GITHUB_ENV
+
       - name: Build and Push
         uses: docker/build-push-action@v4
         with:
           context: .
           push: true
-          tags: diydong/mongodb-api:latest
+          tags: |
+            diydong/mongodb-api:latest
+            diydong/mongodb-api:${{ env.SHORT_SHA }}
